--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,4 +1,6 @@
 . header {
+    background: var(--tg-theme-bg-color);
+    color: var(--tg-theme-text-color);
     width: 100%;
     height: 50px;
     display: flex;
